# monitor-xs-ip2

./: .gitignore  README.md  pyproject.toml  setup.py
.config/: config.json
analysis/: gamma_spec_analysis.py
res/: README.md
res/efficiency_cal/: 230724_Eff_Cal_EastHPGe_Lab35.xlsx  Eff_Cal_EastHPGe_Lab109.xlsx  Efficiency_Calibrations_OIPA_Lab35.xlsx
res/input/: gamma_lines.xlsx  irradiations.xlsx  materials.xlsx  proton_beam.xlsx
res/monitor_xs/: Ni-57.csv  Sc-46.csv  V-48.csv  Zn-62.csv  Zn-63.csv  Zn-65.csv
src/: setup.py
src/monitor_xs_ip2/: README.md  activity_evaluation.py  cross_section.py  data_plots.py  measurement.py  radionuclide.py  spectrometry.py  target.py
src/monitor_xs_ip2/core/: __init__.py  srim_utils.py  utils.py
src/python/: __init__.py  activity_evaluation.py  measurement.py  proton_beam.py  spectrometry.py
src/python/core/: srim_utils.py  utils.py
