[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor-xs-ip2_renaldinE"
version = "0.1"
authors = [
  { name = "Edoardo Renaldin", email = "edoardo.renaldin@gmail.com"}
]
maintainers = [
    {name = "Edoardo Renaldin", email = "edoardo.renaldin@gmail.com"}
]
description = "Monitor cross section measurement at IP2 target station of PSI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    # Indicate who your project is intended for
    "Intended Audience :: Scientists",
    "Topic :: Nuclear Physics :: Monitor Cross Section",

    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.dependencies]
dependencies = [
    "pandas",
    "scipy",
    "numpy",
    "matplotlib",
    "xlsxwriter",
    "periodictable",
    "pysrim"
]

[project.urls]
Homepage = "https://github.com/renaldinE/monitor-xs-ip2"
Issues = "https://github.com/renaldinE/monitor-xs-ip2/issues"