[project]
name = "monitor-xs-ip2"
version = "0.1"
authors = [
  { name = "Edoardo Renaldin", email = "edoardo.renaldin@gmail.com" }
]
maintainers = [
    { name = "Edoardo Renaldin", email = "edoardo.renaldin@gmail.com" }
]
description = "Monitor cross section measurement at IP2 target station of PSI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Scientists",
    "Topic :: Nuclear Physics :: Monitor Cross Section",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "pandas",
    "scipy",
    "numpy",
    "matplotlib",
    "xlsxwriter",
    "periodictable",
    "pysrim"
]

[project.urls]
Homepage = "https://github.com/renaldinE/monitor-xs-ip2"
Issues = "https://github.com/renaldinE/monitor-xs-ip2/issues"
